--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@react-three/drei": "^9.88.10",
     "@react-three/fiber": "^8.15.9",
     "react": "^18.2.0",
@@ -20,11 +22,14 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "leva": "^0.9.35",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^4.4.5"
   }
 }
