--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "leva": "^0.9.35",
     "postcss": "^8.4.35",
+    "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1",
     "vite": "^4.4.5"
   }
