--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "@react-three/drei": "^9.88.10",
     "@react-three/fiber": "^8.15.9",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.158.0"
