--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.1.3",
     "@react-three/drei": "^9.88.10",
     "@react-three/fiber": "^8.15.9",
+    "@react-three/postprocessing": "^2.16.2",
     "gsap": "^3.12.5",
+    "postprocessing": "^6.35.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.158.0"
