--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.88.10",
     "@react-three/fiber": "^8.15.9",
     "@react-three/postprocessing": "^2.16.2",
+    "@tailwindcss/forms": "^0.5.7",
     "gsap": "^3.12.5",
     "postprocessing": "^6.35.4",
     "react": "^18.2.0",
