--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@react-three/drei": "^9.88.10",
     "@react-three/fiber": "^8.15.9",
     "@react-three/postprocessing": "^2.16.2",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.7.6",
     "gsap": "^3.12.5",
     "postprocessing": "^6.35.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
