--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gsap": "^3.12.5",
     "postprocessing": "^6.35.4",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "three": "^0.158.0",
+    "valtio": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
