--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
+    "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.88.10",
     "@react-three/fiber": "^8.15.9",
     "@react-three/postprocessing": "^2.16.2",
